--- a/Bluestone/Bluestone.csproj
+++ b/Bluestone/Bluestone.csproj
@@ -9,4 +9,17 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="AppLayout\AppShell.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controls\" />
+    <Folder Include="DataService\" />
+    <Folder Include="Validators\" />
+    <Folder Include="Styles\" />
+  </ItemGroup>
 </Project>
