simple folder architecture added for project

--- a/Bluestone/Bluestone.csproj
+++ b/Bluestone/Bluestone.csproj
@@ -19,7 +19,11 @@
   <ItemGroup>
     <Folder Include="Controls\" />
     <Folder Include="DataService\" />
+    <Folder Include="Models\Messages\" />
+    <Folder Include="Models\Auth\" />
     <Folder Include="Validators\" />
     <Folder Include="Styles\" />
+    <Folder Include="ViewModels\Messages\" />
+    <Folder Include="Views\Messages\" />
   </ItemGroup>
 </Project>
